# llm_srt_translation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compare_translations.py  example.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  srt_translator.py
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md
tests/: __init__.py  conftest.py  test_srt_translator.py
